--- a/public/pages/connector/advanced/channels.html
+++ b/public/pages/connector/advanced/channels.html
@@ -1,4 +1,4 @@
-<a href ui-sref="connector.advanced.channels.editor({name: 'new'})" class="btn btn-success pull-right">Add</a>
+<a href ui-sref=".editor({name: 'new'})" class="btn btn-success pull-right">Add</a>
 
 <h3><i class='icon-edit'></i> Custom </h3>
 
