--- a/public/pages/connector/advanced/index.html
+++ b/public/pages/connector/advanced/index.html
@@ -1,16 +1,16 @@
 <!-- Advanced Tab-->
     <ul class="nav nav-pills">
         <li ui-sref-active="active">
-            <a href ui-sref="connector.advanced.devices">Smart Devices</a>
+            <a href ui-sref=".devices">Smart Devices</a>
         </li>
         <li ui-sref-active="active">
-            <a href ui-sref="connector.advanced.gateways">Configure Hubs</a>
+            <a href ui-sref=".gateways">Configure Hubs</a>
         </li>
         <li ui-sref-active="active">
-            <a href ui-sref="connector.advanced.channels">Custom Channels</a>
+            <a href ui-sref=".channels">Custom Channels</a>
         </li>
         <li ui-sref-active="active">
-            <a href="" ui-sref="connector.advanced.messaging">Message Devices</a>
+            <a href="" ui-sref=".messaging">Message Devices</a>
         </li>
     </ul>
     <div class="tab-content" ui-view="">
