--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -24,7 +24,7 @@
 
              <div class="btn-group btn-group-justified">
                  <div class="btn-group">
-                     <a href ui-sref="connector.devices.detail({uuid : device.uuid})" class="btn btn-default">
+                     <a href ui-sref="^.detail({uuid : device.uuid})" class="btn btn-default">
                          <i class="fa fa-th-large fa-lg" style="margin-right: 5px;"></i>Details
                      </a>
                  </div>
