--- a/public/index.html
+++ b/public/index.html
@@ -55,129 +55,7 @@
     </style>
 </head>
 <body class="contrast-sea-blue" ng-app="octobluApp">
-
-
-<header>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <a class="navbar-brand" href="" ui-sref="home">
-            <img src="/assets/images/octoblu.png" height="50px"/>
-        </a>
-        <a class="toggle-nav btn pull-left" href="">
-            <i class="icon-reorder"></i>
-        </a>
-        <ul class="nav">
-            <li class="auth"><!-- <a href="/login"><i class="fa fa-lock"></i> Sign In/Up</a> --></li>
-            <li class="dropdown dark user-menu">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    <span class="avatar">
-                        <img width="23" height="23" ng-src="{{currentUser.avatarUrl}}">
-                    </span>
-                    <span class="user-name">{{currentUser.displayName}}</span>
-                    <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <a href="" ui-sref="profile">
-                            <i class="icon-user"></i>
-                            Profile
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" ui-sref="services">
-                            <i class="icon-cog"></i>
-                            Services
-                        </a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href ng-click="logout()" target="_self">
-                            <i class="icon-signout"></i>
-                            Sign out
-                        </a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
-</header>
-
-<!-- Left Nav Menu -->
-<div id="main">
-    <div id="main-nav-bg"></div>
-    <nav id="main-nav">
-        <div class="navigation">
-            <ul class="nav nav-stacked">
-                <li id="nav-dashboard" ng-class="{'active': $state.includes('dashboard')}">
-                    <a href="" ui-sref="dashboard">
-                        <i class="icon-dashboard"></i>
-                        <span>Dashboard</span>
-                    </a>
-                </li>
-                <li id="nav-connector" ng-class="{'active': $state.includes('connector')}">
-                    <a href="" ui-sref="connector.devices.all">
-                        <i class="icon-code-fork"></i>
-                        <span>Connectors</span>
-                    </a>
-                </li>
-                <li id="nav-designer" ng-class="{'active': $state.includes('designer')}">
-                    <a href="" ui-sref="designer"><i class="icon-edit"></i>
-                        <span>Designer</span>
-                    </a>
-                </li>
-                <li id="nav-analyzer" ng-class="{'active': $state.includes('analyzer')}">
-                    <a href="" ui-sref="analyzer">
-                        <i class="icon-bar-chart"></i>
-                        <span>Analyzer</span>
-                    </a>
-                </li>
-                <li id="nav-community" ng-class="{'active': $state.includes('community')}">
-                    <a href="" ui-sref="community">
-                        <i class="icon-group"></i>
-                        <span>Community</span>
-                    </a>
-                </li>
-                <li id="nav-admin" ng-class="{'active': $state.includes('admin')}">
-                    <a href="" ui-sref="admin.all"  >
-                        <i class="icon-lock"></i>
-                        <span>Admin</span>
-                    </a>
-                </li>
-                <li id="nav-resources">
-                    <a class="dropdown-collapse" href="" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
-                        <i class="icon-book"></i>
-                        <span>Resources</span>
-                        <i class="icon-angle-down angle-down"></i>
-                    </a>
-                    <ul class="nav nav-stacked" ng-class="{'in': navCollapsed && !navCollapsed}">
-                        <li ng-class="{'active': $state.includes('docs')}">
-                            <a href="" ui-sref="docs">
-                                <i class="icon-cogs"></i>
-                                <span>API Docs</span>
-                            </a>
-                        </li>
-                        <li ng-class="{'active': $state.includes('pricing')}">
-                            <a href="" ui-sref="pricing">
-                                <i class="icon-table"></i>
-                                <span>Pricing tables</span>
-                            </a>
-                        </li>
-                        <li ng-class="{'active': $state.includes('faqs')}">
-                            <a href="" ui-sref="faqs">
-                                <i class="icon-bullhorn"></i>
-                                <span>FAQ</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
-
-<!-- Content -->
-<div ui-view="" class="reveal-animation">
-
-</div>
+<div ui-view="" class="reveal-animation"></div>
 
 <footer></footer>
 
@@ -254,7 +132,7 @@
 <script src="angular/controllers/devtools.js"></script>
 <script src="angular/controllers/docs.js"></script>
 <script src="angular/controllers/faqs.js"></script>
-<script src="angular/controllers/home.js"></script>
+<script src="angular/controllers/octoblu.js"></script>
 <script src="angular/controllers/login.js"></script>
 <script src="angular/controllers/pricing.js"></script>
 <script src="angular/controllers/profile.js"></script>
