--- a/public/pages/connector/devices/detail/index.html
+++ b/public/pages/connector/devices/detail/index.html
@@ -42,7 +42,7 @@
                             <div class="panel-body">
                                 <ul class="list-group">
                                     <li class="list-group-item" ng-repeat="group in targetGroups | orderBy: group.name">
-                                        <a href ui-sref="admin.detail({uuid : group.uuid})">{{group.name}}</a>
+                                        <a href ui-sref="ob.admin.detail({uuid : group.uuid})">{{group.name}}</a>
                                     </li>
 
                                 </ul>
