--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -10,19 +10,18 @@
                     </h1>
                 </div>
                 <ul class="nav nav-tabs">
-                    <li ng-class="{'active': $state.includes('connector.devices')}">
-                        <a href="" ui-sref="connector.devices.all">Devices</a>
+                    <li ui-sref-active="active">
+                        <a href="" ui-sref=".devices.all">Devices</a>
                     </li>
-                    <li ng-class="{'active': $state.includes('connector.channels')}">
-                        <a href="" ui-sref="connector.channels.index">Channels</a>
+                    <li ui-sref-active="active">
+                        <a href="" ui-sref=".channels.index">Channels</a>
                     </li>
-                    <li ng-class="{'active': $state.includes('connector.advanced')}">
-                        <a href="" ui-sref="connector.advanced.devices">Advanced</a>
+                    <li ui-sref-active="active">
+                        <a href="" ui-sref=".advanced.devices">Advanced</a>
                     </li>
                 </ul>
                 <div class="tab-content" ui-view="">
                 </div>
-
             </div>
         </div>
     </div>
