--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -34,7 +34,7 @@
                                 <div ng-switch="!!devices ? devices.length : 0" >
                                     <h1>
                                         <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                                        <div ng-switch-default><a href="" ui-sref="connector.devices.all">{{devices.length}}</a></div>
+                                        <div ng-switch-default><a href="" ui-sref="^.connector.devices.all">{{devices.length}}</a></div>
                                     </h1>
                                 </div>
                             </div>
@@ -50,7 +50,7 @@
                                 <div ng-switch="!!channels ? 1 : 0" >
                                     <h1>
                                         <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                                        <div ng-switch-default><a href="" ui-sref="connector.channels.index">{{channels.length}}</a></div>
+                                        <div ng-switch-default><a href="" ui-sref="^.connector.channels.index">{{channels.length}}</a></div>
                                     </h1>
                                 </div>
                             </div>
@@ -65,7 +65,7 @@
                                 <div ng-switch="!!messages ? 1 : 0" >
                                     <h1>
                                         <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                                        <div ng-switch-default><a href="" ui-sref="analyzer">{{messages.total}}</a></div>
+                                        <div ng-switch-default><a href="" ui-sref="^.analyzer">{{messages.total}}</a></div>
                                     </h1>
                                 </div>
                             </div>
@@ -78,7 +78,7 @@
                             <h3 class="panel-title">Messages</h3>
                         </div>
                         <div class="panel panel-default">
-                            <a href="" ui-sref="analyzer">
+                            <a href="" ui-sref="^.analyzer">
                                 <div class="panel-body">
                                     <div ng-switch="!!messages ? 1 : 0" >
                                         <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
@@ -95,7 +95,7 @@
                             <h3 class="panel-title">Message Types</h3>
                         </div>
                         <div class="panel panel-default">
-                            <a href="" ui-sref="analyzer">
+                            <a href="" ui-sref="^.analyzer">
                                 <div class="panel-body">
                                     <div ng-switch="!!messages ? 1 : 0" >
                                         <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
