--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -58,7 +58,7 @@
        </div>
        <div class="btn-group btn-group-justified">
            <div class="btn-group">
-               <a class="btn btn-primary btn-lg" href ui-sref="connector.devices.wizard.instructions">
+               <a class="btn btn-primary btn-lg" href ui-sref="^.wizard.instructions">
                    <i class="fa fa-plus"></i> Add Hub<i class="fa fa-building-o" style="margin-left: 10px;"></i>
                </a>
            </div>
