--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,6 @@
     <link href="assets/stylesheets/style.css" rel="stylesheet" media="screen">
     <link href="assets/stylesheets/custom.css" rel="stylesheet">
     <link href="assets/stylesheets/animation.css" rel="stylesheet">
-    <link href="assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.css" type="text/css"/>
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" type="text/css"/>
@@ -119,6 +118,9 @@
 <script src="angular/controllers/analyzer.js"></script>
 <script src="angular/controllers/api.js"></script>
 <script src="angular/controllers/channel.js"></script>
+<script src="angular/controllers/hub.js"></script>
+<script src="angular/controllers/messaging.js"></script>
+<script src="angular/controllers/smart-device.js"></script>
 <script src="angular/controllers/connector.js"></script>
 <script src="angular/controllers/contact.js"></script>
 <script src="angular/controllers/device-wizard.js"></script>
