--- a/public/pages/connector/advanced/gateways/index.html
+++ b/public/pages/connector/advanced/gateways/index.html
@@ -24,6 +24,7 @@
                             </select>
                             <a href class="btn btn-success" ng-class="{disabled : ! selectedDeviceType }" ng-click="editSubdevice(hub, selectedDeviceType.plugin)"><i class="fa fa-plus"></i>Add</a>
                         </div>
+                        <pre>{{hub.subdevices | json}}</pre>
                         <div class="table-responsive">
                             <table class="table table-striped table-hover">
                                 <tr>
