Simplified Twitter Passport Strategy, now the User is registered with skynet without errors storing skynet uuid and token.

--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -50,7 +50,7 @@
                                 <div ng-switch="!!channels ? 1 : 0" >
                                     <h1>
                                         <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                                        <div ng-switch-default><a href="" ui-sref="^.connector.channels.index">{{channels.length}}</a></div>
+                                        <div ng-switch-default><a href ui-sref="ob.connector.channels.index">{{channels.length}}</a></div>
                                     </h1>
                                 </div>
                             </div>
