Added scope-mediated per-device message listening.

--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,7 @@
 <script src="angular/directives/nvd3-pie-chart.js"></script>
 <script src="angular/directives/popover.js"></script>
 <script src="angular/directives/toggle.js"></script>
+<script src="angular/directives/message-grapher/message-grapher.js"></script>
 <script src="angular/directives/device-property-editor/device-property-editor.js"></script>
 <script src="angular/directives/schema-editor/schema-editor.js"></script>
 <script src="angular/controllers/about.js"></script>
