--- a/public/pages/connector/devices/detail/index.html
+++ b/public/pages/connector/devices/detail/index.html
@@ -3,6 +3,7 @@
 
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <h2>{{device.name}}</h2>
+        <message-grapher device="device"></message-grapher>
         <ul class="list-group col-xl-4 col-lg-5 col-md-6 col-sm-8 col-xs-12">
             <li class="list-group-item">
                 <label>UUID</label>
