--- a/public/pages/connector/devices/detail/index.html
+++ b/public/pages/connector/devices/detail/index.html
@@ -25,7 +25,7 @@
                 </li>
             </ul>
             <div class="col-lg-5 col-md-6 col-sm-8 col-xs-12">
-                <message-grapher device="device"></message-grapher>
+                <message-grapher device="device.uuid"></message-grapher>
             </div>
         </div>
         <section class="col-xs-12">
