--- a/public/pages/connector/advanced/messaging.html
+++ b/public/pages/connector/advanced/messaging.html
@@ -1,38 +1,46 @@
+<div class="col-xs-12">
+    <h2 class="col-lg-6 col-sm-12"><i class="fa fa-send-o"></i> Message Devices</h2><br/>
 
-        <h2><i class='icon-magic'></i> Message Devices</h2><br />
+    <h2 class="col-lg-6 col-sm-12"><i class="fa fa-envelope-o"></i> Message Response</h2><br/>
+</div>
+<div class="form-inline col-lg-6 col-sm-12 panel panel-default">
+    FROM: <br/><br/>
+    <select ng-model="fromDevice" ng-options="device.name for device in devices" class="form-control"
+            id="fromDevice"></select>
+    <br/><br/>
 
-        <div class="form-inline">
-            FROM: <br /><br />
-            <select ng-model="fromDevice" ng-options="device.name for device in devices" class="form-control" id="fromDevice"></select>
-            <br /><br />
+    TO:<br/><br/>
 
-            TO:<br /><br />
-            <div class="form-group">
-                <!-- <select ng-model="device" ng-options="device.name for device in devices" class="form-control"></select> -->
-                <select ng-model="device" ng-options="device.name for device in devices" class="form-control" id="device"></select>
+    <div class="form-group">
+        <!-- <select ng-model="device" ng-options="device.name for device in devices" class="form-control"></select> -->
+        <select ng-model="device" ng-options="device.name for device in devices" class="form-control"
+                id="device"></select>
 
-            </div>
-            <div class="form-group"> OR </div>
-            <div class="form-group">
-                <input size="40" ng-model="sendUuid" class="form-control" placeholder="UUID"> * = broadcast
-            </div>
-            <br /><br />
+    </div>
+    <div class="form-group"> OR</div>
+    <div class="form-group">
+        <input size="40" ng-model="sendUuid" class="form-control" placeholder="UUID"> * = broadcast
+    </div>
+    <br/><br/>
 
-            <div ng-hide="!device.subdevices">
-                Select a Gateway Subdevice:<br /><br />
-                <select ng-model="subdevice" ng-options="subdevice.name for subdevice in device.subdevices | orderBy:'name'" class="form-control" id="subdevice"></select>
-                <br /><br />
-            </div>
+    <div ng-hide="!device.subdevices">
+        Select a Gateway Subdevice:<br/><br/>
+        <select ng-model="subdevice" ng-options="subdevice.name for subdevice in device.subdevices | orderBy:'name'"
+                class="form-control" id="subdevice"></select>
+        <br/><br/>
+    </div>
 
-            <div ng-hide="!schema">
-                <schema-editor control="schemaEditor" schema="schema" model="msg" allow-json-edit="true" additional-properties="true"></schema-editor>
-            </div>
+    <div ng-hide="!schema">
+        <schema-editor control="schemaEditor" schema="schema" model="msg" allow-json-edit="true"
+                       additional-properties="true"></schema-editor>
+    </div>
 
-
-        </div>
-        <!--<input  ng-show="!subdevice" ng-hide="subdevice"  ng-model="sendText" class="form-control" placeholder="Message">-->
-        <br />
-        <button ng-click="sendMessage()" class="btn btn-primary">Send</button>
-        <span style="color:green;"><pre>{{messageOutput | json }}</pre></span><br />
-        <br /><br />
+    <button ng-click="sendMessage()" class="btn btn-primary">Send</button>
+</div>
+<!--<input  ng-show="!subdevice" ng-hide="subdevice"  ng-model="sendText" class="form-control" placeholder="Message">-->
+<div class="col-lg-6 col-sm-12 panel panel-default">
+    <div class="panel-body">
+        <pre ng-hide="!messageOutput">{{messageOutput | json }}</pre>
+    </div>
+</div>
 
