--- a/public/pages/connector/devices/detail/index.html
+++ b/public/pages/connector/devices/detail/index.html
@@ -1,29 +1,8 @@
 <div class="row device-detail">
-    <h1 style="margin-left: 15px;"><i class="fa fa-hdd-o"></i>Details</h1>
-
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <h2>{{device.name}}</h2>
-
+        <h2><i class="fa fa-power-off" ng-class="{'text-success': device.online, 'text-muted': ! device.online}"></i> {{device.name}}</h2>
+        <h4 class="text-muted">{{device.uuid}}</h4>
         <div>
-            <ul class="list-group col-lg-5 col-md-6 col-sm-8 col-xs-12">
-                <li class="list-group-item">
-                    <label>UUID</label>
-                    <span class="label label-default pull-right">{{device.uuid}}</span>
-                </li>
-                <li class="list-group-item">
-                    <label>Online</label>
-
-                    <div class="btn-group pull-right">
-                        <label ng-class="{'btn' : true, 'btn-success' : device.online, 'btn-default': !device.online, 'disabled': true}"
-                               ng-model="device.online"
-                               btn-radio=true value="YES" uncheckable>Yes</label>
-                        <label ng-model="device.online"
-                               ng-class="{'btn' : true, 'btn-danger' : !device.online, 'btn-default': device.online, 'disabled': true}"
-                               btn-radio=false value="NO" uncheckable>No</label>
-                    </div>
-
-                </li>
-            </ul>
             <div class="col-lg-5 col-md-6 col-sm-8 col-xs-12">
                 <message-grapher device="device.uuid"></message-grapher>
             </div>
