Used bootstrap Navigation for Navigation Menu, now the nav is responsive and works in mobile.

--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,8 @@
         }
     </style>
 </head>
-<body class="contrast-sea-blue" ng-app="octobluApp">
-<div ui-view="" class="reveal-animation"></div>
+<body class="contrast-sea-blue container-fluid" ng-app="octobluApp">
+<div ui-view="" class="row-fluid"></div>
 
 <footer></footer>
 
