--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -3,10 +3,10 @@
         padding-left: 0px;
         padding-right: 0px;
     }
- 
-    @media(min-width: 992px){
+
+    @media (min-width: 992px) {
         .permissions-panel {
-           margin : 0px 55px 0 55px;
+            margin: 0px 55px 0 55px;
 
         }
     }
@@ -30,13 +30,14 @@
 
     .permissions-panel .panel-footer {
         padding-bottom: 10px;
-        margin:0;
+        margin: 0;
     }
-   .resource-panel .panel-heading .title {
+
+    .resource-panel .panel-heading .title {
         color: #ffffff !important;
     }
 
-    .resource-panel .panel-heading .title >  a:hover {
+    .resource-panel .panel-heading .title > a:hover {
         cursor: hand !important;
         border: 1px solid;
     }
@@ -61,7 +62,7 @@
         margin-right: 15px;
     }
 
-    .group-summary-panel-heading  a.bg-primary:hover,
+    .group-summary-panel-heading a.bg-primary:hover,
     {
         cursor: hand !important;
         text-decoration: underline !important;
@@ -77,84 +78,86 @@
         margin-bottom: 0px;
         padding-left: 0px;
     }
+
     .resource-icon {
-        font-size:1.5em;
+        font-size: 1.5em;
     }
+
     .resource-panel .panel-footer ul.dropdownmenu {
 
     }
 </style>
 
-<section id="content">
-    <div class="container full-screen">
-        <div class="row" id="content-wrapper">
-            <div class="col-xs-12">
-                <div class='page-header'>
-                    <h1 class="col-xs-12 col-sm-12 col-md-11 col-lg-11" style="margin-top: 25px;">
-                        <i class='fa fa-lock'></i>
-                        <span>Admin</span>
-                        <form class="form-inline pull-right" role="form" style="margin-top: 0px;">
-                            <div class="form-group">
-                                <label class="sr-only" for="recipientEmail">Email address</label>
-                                <input type="email" class="form-control" id="recipientEmail" ng-model="recipientEmail"
-                                       placeholder="Enter email">
-                            </div>
-                            <button type="button" class="btn btn-default btn-lg" ng-disabled="form.$invalid" ng-click="send()"
-                                    style="margin-top: 0px;">
-                                <i class="fa fa-users" style="margin-right: 10px"></i>Invite
-                            </button>
-                        </form>
+<div class="col-xs-12">
+    <div class='page-header'>
+        <h1 class="col-xs-12 col-sm-12 col-md-11 col-lg-11" style="margin-top: 25px;">
+            <i class='fa fa-lock'></i>
+            <span>Admin</span>
 
-                    </h1>
+            <form class="form-inline pull-right" role="form" style="margin-top: 0px;">
+                <div class="form-group">
+                    <label class="sr-only" for="recipientEmail">Email address</label>
+                    <input type="email" class="form-control" id="recipientEmail" ng-model="recipientEmail"
+                           placeholder="Enter email">
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ui-view=""></div>
+                <button type="button" class="btn btn-default btn-lg" ng-disabled="form.$invalid" ng-click="send()"
+                        style="margin-top: 0px;">
+                    <i class="fa fa-users" style="margin-right: 10px"></i>Invite
+                </button>
+            </form>
 
-                <div class="col-xs-12 col-sm-12 col-md-11 col-lg-11 group-summary">
+        </h1>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ui-view=""></div>
 
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <a class="pull-left btn btn-default" ui-sref=".all"><i
-                                class="fa fa-th-large"></i>All</a>
+    <div class="col-xs-12 col-sm-12 col-md-11 col-lg-11 group-summary">
 
-                        <form class="form-inline pull-right" role="form">
-                            <div class="form-group">
-                                <label class="sr-only" for="add-group-name">Email address</label>
-                                <input type="text" ng-model="resourcePermissionName" name="groupName" class="form-control" id="add-group-name"
-                                       placeholder="Enter a Group Name" required>
-                            </div>
-                            <button type="button" ng-click="addResourcePermission()" class="btn btn-default"><i class="fa fa-plus"></i>Add Group</button>
-                        </form>
-                    </div>
-                    <h3 class="text-center text-muted col-xs-12 col-sm-12 col-md-12 col-lg-12">Groups</h3>
-                    <div data-ng-repeat="resourcePermission in allGroupResourcePermissions | orderBy:'name'"
-                         class="panel panel-primary col-xs-12 col-sm-12 col-md-2 col-lg-2 group-summary-panel">
-                        <div class="panel-heading group-summary-panel-heading">
-                            <h4>
-                            <i class="fa fa-users"></i>
-                            <a ui-sref=".detail({ 'uuid' : resourcePermission.uuid })" class="bg-primary">{{resourcePermission.name}}</a>
-                            <a href class="pull-right bg-primary" tooltip="Delete {{resourcePermission.name}}" tooltip-placement="top"
-                               tooltip-popup-delay="5" ng-click="deleteResourcePermission(resourcePermission)">
-                                    <i class="fa fa-trash-o fa-lg"></i>
-                            </a>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <a class="pull-left btn btn-default" ui-sref=".all"><i
+                    class="fa fa-th-large"></i>All</a>
 
-                            </h4>
-
-                        </div>
-                        <div class="panel-body group-summary-panel-body">
-                            <ul>
-                                <li>{{controller}}</li>
-                                <li>
-                                    <i class="fa fa-user" style="margin-right: 10px;"></i>People <span
-                                        class="label label-info pull-right">{{resourcePermission.resource.properties.resourceCounts.user || 0}}</span>
-                                </li>
-                                <li>
-                                    <i class="fa fa-hdd-o" style="margin-right: 10px;"></i>Devices<span
-                                        class="label label-success pull-right">{{resourcePermission.resource.properties.resourceCounts.device || 0}}</span>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+            <form class="form-inline pull-right" role="form">
+                <div class="form-group">
+                    <label class="sr-only" for="add-group-name">Email address</label>
+                    <input type="text" ng-model="resourcePermissionName" name="groupName" class="form-control"
+                           id="add-group-name"
+                           placeholder="Enter a Group Name" required>
                 </div>
+                <button type="button" ng-click="addResourcePermission()" class="btn btn-default"><i
+                        class="fa fa-plus"></i>Add Group
+                </button>
+            </form>
+        </div>
+        <h3 class="text-center text-muted col-xs-12 col-sm-12 col-md-12 col-lg-12">Groups</h3>
+
+        <div data-ng-repeat="resourcePermission in allGroupResourcePermissions | orderBy:'name'"
+             class="panel panel-primary col-xs-12 col-sm-12 col-md-2 col-lg-2 group-summary-panel">
+            <div class="panel-heading group-summary-panel-heading">
+                <h4>
+                    <i class="fa fa-users"></i>
+                    <a ui-sref=".detail({ 'uuid' : resourcePermission.uuid })" class="bg-primary">{{resourcePermission.name}}</a>
+                    <a href class="pull-right bg-primary" tooltip="Delete {{resourcePermission.name}}"
+                       tooltip-placement="top"
+                       tooltip-popup-delay="5" ng-click="deleteResourcePermission(resourcePermission)">
+                        <i class="fa fa-trash-o fa-lg"></i>
+                    </a>
+
+                </h4>
+
+            </div>
+            <div class="panel-body group-summary-panel-body">
+                <ul>
+                    <li>{{controller}}</li>
+                    <li>
+                        <i class="fa fa-user" style="margin-right: 10px;"></i>People <span
+                            class="label label-info pull-right">{{resourcePermission.resource.properties.resourceCounts.user || 0}}</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-hdd-o" style="margin-right: 10px;"></i>Devices<span
+                            class="label label-success pull-right">{{resourcePermission.resource.properties.resourceCounts.device || 0}}</span>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
-</section>
+</div>
