--- a/public/pages/community.html
+++ b/public/pages/community.html
@@ -1,46 +1,42 @@
-<section id='content'>
-  <div class='container full-screen'>
-    <div class='row' id='content-wrapper'>
-      <div class='col-xs-12'>
-
-        <div class='page-header page-header-with-buttons'>
-          <div class='hidden-sm hidden-xs'>
+<div class='col-xs-12'>
+    <div class='page-header page-header-with-buttons'>
+        <div class='hidden-sm hidden-xs'>
             <h1 class='pull-left'>
               <span>
                 <i class='icon-group'></i>
                 <span>Community</span>
               </span>
             </h1>
-          </div>
-          <div class='hidden-md hidden-lg'>
+        </div>
+        <div class='hidden-md hidden-lg'>
             <h1 style='margin-bottom: 1em;'>
-              <i class='icon-group'></i>
-              <span>Community</span>
+                <i class='icon-group'></i>
+                <span>Community</span>
             </h1>
-          </div>
         </div>
-        <div class="row">
-            <div class="col-sm-6 box">
-                <div class="box-header">
-                    <div class="header">Blog</div>
-                </div>
-                <div class="box-content">
-                    <div class="well">Learn from our powerful knowledge base for creating projects and intergrated Octoblu systems.</div>
-                    <a href="http://blog.octoblu.com/" title="Octoblu Blog" class="btn btn-primary"><i class='icon-comments'></i>  Go to Blog</a>
-                </div>
-            </div>
-            <div class="col-sm-6 box">
-                <div class="box-header">
-                    <div class="header">Forum</div>
-                </div>
-                <div class="box-content">
-                    <div class="well">Connect, share and discuss Octoblu with the community. <br /><br /></div>
-                    <a href="http://forum.octoblu.com/" title="Octoblu Forum" class="btn btn-primary"><i class='icon-group'></i>  Go to Forum</a>
-                </div>
-            </div>
-        </div>
-
-      </div>
     </div>
-  </div>
-</section>
+    <div class="row">
+        <div class="col-sm-6 box">
+            <div class="box-header">
+                <div class="header">Blog</div>
+            </div>
+            <div class="box-content">
+                <div class="well">Learn from our powerful knowledge base for creating projects and intergrated Octoblu
+                    systems.
+                </div>
+                <a href="http://blog.octoblu.com/" title="Octoblu Blog" class="btn btn-primary"><i
+                        class='icon-comments'></i> Go to Blog</a>
+            </div>
+        </div>
+        <div class="col-sm-6 box">
+            <div class="box-header">
+                <div class="header">Forum</div>
+            </div>
+            <div class="box-content">
+                <div class="well">Connect, share and discuss Octoblu with the community. <br/><br/></div>
+                <a href="http://forum.octoblu.com/" title="Octoblu Forum" class="btn btn-primary"><i
+                        class='icon-group'></i> Go to Forum</a>
+            </div>
+        </div>
+    </div>
+</div>
