--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -1,117 +1,65 @@
-
-<header>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <a class="navbar-brand" href="" ui-sref="ob">
-            <img src="/assets/images/octoblu.png" height="50px"/>
-        </a>
-        <a class="toggle-nav btn pull-left" href="">
-            <i class="icon-reorder"></i>
-        </a>
-        <ul class="nav">
-            <li class="auth"><!-- <a href="/login"><i class="fa fa-lock"></i> Sign In/Up</a> --></li>
-            <li class="dropdown dark user-menu">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    <span class="avatar">
+<nav class="navbar navbar-default navbar-fixed-top col-xs-12"  role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#ob-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-link" href ui-sref="ob">
+                <img src="/assets/images/octoblu.png" height="50px"/>
+            </a>
+        </div>
+        <div class="collapse navbar-collapse navbar-right" id="ob-navbar-collapse-1">
+            <ul class="nav navbar-nav" ng-show="currentUser">
+                <li ui-sref-active="active"><a href ui-sref=".dashboard"><i class="fa fa-dashboard fa-lg"></i>&nbsp;Dashboard</a></li>
+                <li ui-sref-active="active"><a href ui-sref=".connector.devices.all"><i class="fa fa-code-fork fa-lg"></i>&nbsp;Connectors</a></li>
+                <li ui-sref-active="active"><a href ui-sref=".designer"><i class="fa fa-edit fa-lg"></i>&nbsp;Designer</a></li>
+                <li ui-sref-active="active"><a href ui-sref=".analyzer"><i class="fa fa-bar-chart-o fa-lg"></i>&nbsp;Analyzer</a></li>
+                <li ui-sref-active="active"><a href ui-sref=".community"><i class="fa fa-group fa-lg"></i>&nbsp;Community</a></li>
+                <li ui-sref-active="active"><a href ui-sref=".admin.all"><i class="fa fa-lock fa-lg"></i>&nbsp;Admin</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" id="resources-drop-down-menu" data-toggle="dropdown">Resources&nbsp;<span class="fa fa-caret-down fa-lg"></span></a>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="resources-drop-down-menu">
+                        <li ><a href ui-sref=".docs"><i class="fa fa-fw fa-gears"></i>API Docs</a></li>
+                        <li class="divider"></li>
+                        <li><a href ui-sref=".pricing"><i class="fa fa-fw fa-money"></i>Pricing</a></li>
+                        <li class="divider"></li>
+                        <li ><a href ui-sref=".faqs"><i class="fa fa-fw fa-bullhorn"></i>FAQ</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown navbar-right">
+                    <a href="#" class="dropdown-toggle" id="profile-drop-down-menu" data-toggle="dropdown">
+                        <span class="avatar">
                         <img width="23" height="23" ng-src="{{currentUser.avatarUrl}}">
-                    </span>
-                    <span class="user-name">{{currentUser.displayName}}</span>
-                    <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <a href="" ui-sref=".profile">
-                            <i class="icon-user"></i> Profile
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" ui-sref=".services">
-                            <i class="icon-cog"></i> Services
-                        </a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href ng-click="logout()">
-                            <i class="icon-signout"></i> Sign out
-                        </a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
-</header>
-
-<!-- Left Nav Menu -->
-<div id="main">
-    <div id="main-nav-bg"></div>
-    <nav id="main-nav">
-        <div class="navigation">
-            <ul class="nav nav-stacked">
-                <li id="nav-dashboard" ui-sref-active="active">
-                    <a href="" ui-sref=".dashboard">
-                        <i class="icon-dashboard"></i>
-                        <span>Dashboard</span>
+                        </span>
+                        <span class="user-name">{{currentUser.displayName}}</span>
+                        <i class="fa fa-caret-down fa-lg"></i>
                     </a>
-                </li>
-                <li id="nav-connector" ui-sref-active="active">
-                    <a href="" ui-sref=".connector.devices.all">
-                        <i class="icon-code-fork"></i>
-                        <span>Connectors</span>
-                    </a>
-                </li>
-                <li id="nav-designer" ui-sref-active="active">
-                    <a href="" ui-sref=".designer"><i class="icon-edit"></i>
-                        <span>Designer</span>
-                    </a>
-                </li>
-                <li id="nav-analyzer" ui-sref-active="active">
-                    <a href="" ui-sref=".analyzer">
-                        <i class="icon-bar-chart"></i>
-                        <span>Analyzer</span>
-                    </a>
-                </li>
-                <li id="nav-community" ui-sref-active="active">
-                    <a href="" ui-sref=".community">
-                        <i class="icon-group"></i>
-                        <span>Community</span>
-                    </a>
-                </li>
-                <li id="nav-admin" ui-sref-active="active">
-                    <a href="" ui-sref=".admin.all"  >
-                        <i class="icon-lock"></i>
-                        <span>Admin</span>
-                    </a>
-                </li>
-                <li id="nav-resources">
-                    <a class="dropdown-collapse" href="" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
-                        <i class="icon-book"></i>
-                        <span>Resources</span>
-                        <i class="icon-angle-down angle-down"></i>
-                    </a>
-                    <ul class="nav nav-stacked" ng-class="{'in': navCollapsed && !navCollapsed}">
-                        <li ui-sref-active="active">
-                            <a href="" ui-sref=".docs">
-                                <i class="icon-cogs"></i>
-                                <span>API Docs</span>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="profile-drop-down-menu">
+                        <li>
+                            <a href="" ui-sref=".profile">
+                                <i class="fa fa-user"></i> Profile
                             </a>
                         </li>
-                        <li ui-sref-active="active">
-                            <a href="" ui-sref=".pricing">
-                                <i class="icon-table"></i>
-                                <span>Pricing tables</span>
+                        <li>
+                            <a href="" ui-sref=".services">
+                                <i class="fa fa-gear"></i> Services
                             </a>
                         </li>
-                        <li ui-sref-active="active">
-                            <a href="" ui-sref=".faqs">
-                                <i class="icon-bullhorn"></i>
-                                <span>FAQ</span>
+                        <li class="divider"></li>
+                        <li>
+                            <a href ng-click="logout()">
+                                <i class="fa fa-signout"></i> Sign out
                             </a>
                         </li>
                     </ul>
                 </li>
             </ul>
-        </div>
-    </nav>
-</div>
-<div ui-view></div>
+        </div><!-- /.navbar-collapse -->
+    </div>
+</nav>
+<div ui-view class="row-fluid"></div>
 
 <!-- Content -->
