Deleted Device Carousel HTML file, no longer needed.

--- a/public/pages/pricing.html
+++ b/public/pages/pricing.html
@@ -2,7 +2,7 @@
 
     <div class='page-header page-header-with-buttons'>
         <h1 class='pull-left'>
-            <i class='icon-table'></i>
+            <i class="fa fa-money"></i>
             <span>Pricing</span>
         </h1>
     </div>
