re-added global message graph

--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -6,6 +6,9 @@
             <span>Connectors</span>
         </h1>
     </div>
+    <div>
+        <message-grapher class="message-summary col-xs-12"></message-grapher>
+    </div>
     <ul class="nav nav-tabs">
         <li ui-sref-active="active">
             <a href="" ui-sref=".devices.all">Devices</a>
