Moved device types to the mongo collection "devicetypes". Updated requisite api calls and urls.

--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -41,13 +41,13 @@
         <div class="device-actions">
             <div class="btn-group btn-group-justified">
                 <div class="btn-group">
-                    <a class="btn btn-inverse btn-lg" href><i class="fa fa-hdd-o fa-2x pull-left"></i><span>Add Device</span></a>
+                    <a class="btn btn-inverse btn-lg add-device" href><i class="fa fa-hdd-o fa-2x pull-left"></i><span>Add Device</span></a>
                 </div>
             </div>
             <div class="btn-group btn-group-justified">
 
                 <div class="btn-group">
-                    <a class="btn btn-primary btn-lg" href ui-sref="^.wizard.instructions">
+                    <a class="btn btn-primary btn-lg claim-device" href ui-sref="^.wizard.instructions">
                         <i class="fa fa-hand-o-right fa-2x pull-left"></i>
                         <span>Claim Device</span>
                     </a>
