--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -37,34 +37,47 @@
 
         </div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">
-        <div class="device-actions">
+    <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 device-actions">
+        <div>
             <div class="btn-group btn-group-justified">
                 <div class="btn-group">
-                    <a class="btn btn-inverse btn-lg add-device" href><i class="fa fa-hdd-o fa-2x pull-left"></i><span>Add Device</span></a>
+                    <a class="btn btn-inverse btn-lg add-device device-action-button" href ui-sref="^.wizard.instructions"><i class="fa fa-h-square fa-2x pull-left"></i><span>Add Hub</span></a>
                 </div>
             </div>
+            <div ng-if="hasHubs" class="panel panel-default subdevice-actions">
+                <div class="panel-heading">
+                    <h4 class="text-center"><i class="fa fa-puzzle-piece fa-2x pull-left"></i><span>Add Sub-Device</span></h4>
+                </div>
+                <div class="panel-body">
+                    <a   ng-class="{'unavailable': !deviceType.enabled }" ng-repeat="deviceType in subdeviceTypes" class="subdevice pull-left" ng-click="addSubdevice(deviceType)" style="margin: 0 0 15px 15px; ">
+                        <img src="{{deviceType.logo || defaultLogo }}" alt="{{deviceType.name}}" width="80" height="80"  ng-model="deviceType" />
+                    </a>
+
+                </div>
+            </div>
+
             <div class="btn-group btn-group-justified">
 
                 <div class="btn-group">
-                    <a class="btn btn-primary btn-lg claim-device" href ui-sref="^.wizard.instructions">
+                    <a class="btn btn-inverse btn-lg claim-device device-action-button">
                         <i class="fa fa-hand-o-right fa-2x pull-left"></i>
                         <span>Claim Device</span>
                     </a>
                 </div>
             </div>
-        </div>
-       <div ng-if="hasHubs" class="panel panel-default subdevice-actions">
-           <div class="panel-heading">
-               <h4 class="text-center"><i class="fa fa-puzzle-piece fa-2x pull-left"></i><span>Add Sub-Device</span></h4>
-           </div>
-           <div class="panel-body">
-                   <a   ng-class="{'unavailable': !smartDevice.enabled }" ng-repeat="smartDevice in smartDevices" class="subdevice pull-left" ng-click="addSubdevice(smartDevice)" style="margin: 0 0 15px 15px; ">
-                     <img src="{{smartDevice.logo || defaultLogo }}" width="80" height="80"  ng-model="smartDevice" />
-                   </a>
+            <div ng-if="hasHubs" class="panel panel-default subdevice-actions">
+                <div class="panel-heading">
+                    <h4 class="text-center"><i class="fa fa-puzzle-piece fa-2x pull-left"></i><span>Add Device</span></h4>
+                </div>
+                <div class="panel-body">
+                    <a   ng-class="{'unavailable': !deviceType.enabled }" ng-repeat="deviceType in deviceTypes" class="subdevice pull-left" ng-click="addSubdevice(deviceType)" style="margin: 0 0 15px 15px; ">
+                        <img src="{{deviceType.logo || defaultLogo }}" alt="{{deviceType.name}}"  width="80" height="80"  ng-model="deviceType" />
+                    </a>
 
-           </div>
-       </div>
+                </div>
+            </div>
+
+        </div>
 
 
     </div>
