--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -44,7 +44,7 @@
                     <a class="btn btn-inverse btn-lg add-device device-action-button" href ui-sref="^.wizard.instructions"><i class="fa fa-h-square fa-2x pull-left"></i><span>Add Hub</span></a>
                 </div>
             </div>
-            <div ng-if="hasHubs" class="panel panel-default subdevice-actions">
+            <div ng-if="hasHubs" class="panel subdevice-actions">
                 <div class="panel-heading">
                     <h4 class="text-center"><i class="fa fa-puzzle-piece fa-2x pull-left"></i><span>Add Sub-Device</span></h4>
                 </div>
@@ -65,9 +65,9 @@
                     </a>
                 </div>
             </div>
-            <div ng-if="hasHubs" class="panel panel-default subdevice-actions">
+            <div ng-if="hasHubs" class="panel subdevice-actions">
                 <div class="panel-heading">
-                    <h4 class="text-center"><i class="fa fa-puzzle-piece fa-2x pull-left"></i><span>Add Device</span></h4>
+                    <h4 class="text-center"><i class="fa fa-hdd-o fa-2x pull-left"></i><span>Add Device</span></h4>
                 </div>
                 <div class="panel-body">
                     <a   ng-class="{'unavailable': !deviceType.enabled }" ng-repeat="deviceType in deviceTypes" class="subdevice pull-left" ng-click="addSubdevice(deviceType)" style="margin: 0 0 15px 15px; ">
