--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -117,7 +117,9 @@
                         <div class="panel ">
                             <a href="">
                                 <div class="panel-body">
-					<select class="form-control" size=10 style="height:100%" multiple data-live-search="true" data-selected-text-format="count>3" ng-model="forms.EX_graphDevices" ng-options="cb_device.name for cb_device in devices">
+					<select class="form-control" size=10 style="height:100%" multiple ng-model="forms.EX_graphDevices" >
+					<option value="*" selected="selected">All Event Codes</option>
+					<option ng-repeat="cb_device in devices" value="{{cb_device.uuid}}">{{cb_device.name}}</option>
   					</select>
                                 </div>
                             </a>
@@ -131,7 +133,7 @@
 				</div>
 				<div class="panel">
 				   <div class="form-group">
-					<label for="eventCode"> Event Code: </label> <select class="form-control" ng-model="forms.EX_eventCode">
+					<label for="eventCode"> Event Code: </label> <select multiple size=5 class="form-control" ng-model="forms.EX_eventCode">
 	                	          <option value="">All Event Codes</option>
         	                	  <option ng-repeat="event in events" value="{{event.code}}">{{event.name}}</option>
 		                        </select>
@@ -146,7 +148,7 @@
 				   </div>
 				</div>
 				</div>
-				<div class="col-md-4 dashboard-panel" >
+				<div class="col-md-8 dashboard-panel" >
 				<div class="panel-heading">
 					<h3 class="panel-title">Summary Results</h3>
 				</div>
