Added Edit Device functionality to Connector / Devices page. Along with Add Device

--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -28,6 +28,11 @@
                      </a>
                  </div>
                  <div class="btn-group">
+                     <a href class="btn btn-inverse" ng-click="editDevice(device)">
+                         <i class="fa fa-edit fa-lg">&nbsp;&nbsp;</i>Edit
+                     </a>
+                 </div>
+                 <div class="btn-group">
                      <button type=button" class="btn btn-danger" ng-click="deleteDevice(device)">
                          <i class="fa fa-trash-o fa-lg" style="margin-right: 5px;"></i>Delete
                      </button>
