--- a/public/pages/connector/devices/device/add-edit.html
+++ b/public/pages/connector/devices/device/add-edit.html
@@ -1,7 +1,10 @@
 <div class="modal-header">
     <img src="{{model.deviceType.logo}}" class="pull-left" height="64px" width="64px">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancel()">&times;</button>
-    <h3 class="modal-title text-center" id="myModalLabel">Add A New {{model.deviceType.name}}</h3>
+    <h3 class="modal-title text-center" id="myModalLabel">
+            <span ng-if="model.isNew">Add New {{model.deviceType.name}}</span>
+            <span ng-if="!model.isNew">Edit {{model.device.name}}</span>
+        </h3>
 </div>
 <div class="modal-body">
     <form class="form-horizontal" role="form">
